TVS file information added

--- a/buzsaki_lab_to_nwb/yuta_code_visual_cortex/files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/yuta_code_visual_cortex/files_documentation.ipynb
@@ -524,8 +524,11 @@
     "\n",
     "file_name = 'spikes_per_cluster'\n",
     "file_path = pickle_files_dic[file_name]\n",
-    "with open(str(file_path), 'rb') as f:\n",
-    "    data = pickle.load(f)"
+    "try:\n",
+    "    with open(str(file_path), 'rb') as f:\n",
+    "        data = pickle.load(f)\n",
+    "except: \n",
+    "    print(\"problem oppening this file\")"
    ]
   },
   {
@@ -549,7 +552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The only file here is `cluster_group`."
+    "The only file here is `cluster_group`. Seems related to the spike sorting."
    ]
   },
   {
@@ -563,6 +566,29 @@
     "\n",
     "df_cluster_group = pd.read_csv(file_path, sep='\\t')\n",
     "df_cluster_group.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_cluster_group.groupby(['group'])['cluster_id'].count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output of this is is should be something like this:\n",
+    "\n",
+    "    group\n",
+    "    good      53\n",
+    "    mua       13\n",
+    "    noise    460\n",
+    "\n",
+    "For the default session in this notebook (the only session for subject YMV01) this seems to indicate that there are 53 good clusters. This corresponds with the cells identified in `cell_metrics.mat`.  My guess right now is that this indicates which of the clusters indicated in `spike_clusters.npy` do correspond to a cell ('good') which ones are noise, etcera."
    ]
   },
   {
