--- a/buzsaki_lab_to_nwb/yuta_code_visual_cortex/files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/yuta_code_visual_cortex/files_documentation.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subject = 'YMV01'\n",
+    "subject = 'YMV04'\n",
     "sessions_path_dic = {p.stem:p for p in subject_path_dic[subject].iterdir() if p.is_dir()}\n",
     "sessions_path_dic.keys()"
    ]
@@ -137,8 +137,8 @@
    "source": [
     "not_data_formats = ['.jpg', '.png', '.pdf', '.svg', '.fig', '.py']\n",
     "\n",
-    "subject = 'YMV01'\n",
-    "date = '170818'\n",
+    "subject = 'YMV04'\n",
+    "date = '170907'\n",
     "session = f\"{subject}_{date}\"\n",
     "session_path = session_path_dic[session]\n",
     "\n",
@@ -235,7 +235,137 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.concat([clu_df, res_df], axis=1).sample(n=5)"
+    "df_sorting = pd.concat([clu_df, res_df], axis=1)\n",
+    "df_sorting.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sorting['unit'].max()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This indicates that "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xml_files_dic = {p.stem:p for p in session_path.rglob('*') if p.suffix == '.xml'}\n",
+    "xml_files_dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spikeextractors import NeuroscopeSortingExtractor \n",
+    "\n",
+    "sorting = NeuroscopeSortingExtractor(resfile_path=sorting_files_dic[res_file_name], \n",
+    "clufile_path=sorting_files_dic[clu_file_name], keep_mua_units=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pprint(sorting.get_unit_ids(), compact=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from spikeextractors import PhySortingExtractor\n",
+    "sorting_phy = PhySortingExtractor(folder_path=session_path, exclude_cluster_groups=['noise', 'mua'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pprint(sorting_phy.get_unit_ids(), compact=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sorting_phy.get_unit_ids())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Let's compare spikes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(sorting_phy.get_unit_spike_train(unit_id=15)), len(sorting.get_unit_spike_train(unit_id=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phy_unit_list = sorting_phy.get_unit_ids()  \n",
+    "spikes_number_phy = [len(sorting_phy.get_unit_spike_train(unit_id=unit_id)) for unit_id in phy_unit_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neuroscope_unit_list = sorting.get_unit_ids()\n",
+    "spikes_number_neuro = [len(sorting.get_unit_spike_train(unit_id=unit_id)) for unit_id in neuroscope_unit_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spikes_number_phy.sort()\n",
+    "spikes_number_neuro.sort()\n",
+    "[(x, y) for (x, y) in zip(spikes_number_phy, spikes_number_neuro)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We should use the phy by default as we have shown here that they have the same information (removing 'noise' and 'mua'). "
    ]
   },
   {
@@ -322,11 +452,52 @@
     "    'cell_metrics', 'chanMap', 'depthsort_parameter_1', 'meanWaveforms', 'rez',\n",
     "    'session']\n",
     "\n",
+    "\n",
+    "Ignore:\n",
+    "Anything with param in the name (.e.g depthsort_parameter_1)\n",
+    "Anything that has plot in the name (e.g. stateplot_materials)\n",
+    "\n",
+    "Temporary note here: It is important to note that we add the phy data we should exclude noise and mua (mult-unit activity).\n",
+    "\n",
+    "\"As a general rule if something can be made by the state data that we use, then it should not be included\" \n",
+    "\n",
+    "\n",
+    "* noiselevel_channel_info . This can be added as an electrodes property.\n",
+    "* chanCoords.channel_info . This is duplicated information from chanmap.\n",
+    "* SlowWaves.events This can be considered processed data involving up-down intervals. This can be include as process data.\n",
+    "* DownUp alignment . Duplication with the LFP. Aligned with specific events. This is for analysis for our concerns this is duplications because we have the base LFP data.\n",
+    "* LFPbase layer. It is unclear how to assign this a specific channel. So this is unclear if this is duplicated or analysis.\n",
+    "* Sleepscore LFP. Means that specific channels where used for sleep detection. These are the channels that were used for doing some analysis. We can add this as boolean flags to indicate that it was use for . So we will use the channel ID. \n",
+    "* Sleepscore metric. Ignore this. Is a part of they made the state classification (REM vs nonRem). But it seems that the information there can be gotten from other pieces of information. It seems that they have the time series for the slow-wave and the theta activity. They assigned some ratio value and then threshold. That is, that's analysis, for the ultimate state that we will add as behavioral data. \n",
+    "* EMG for LFP. This we haven seen in previous work but we have not included. Normally EMG that is electromyaography-... is a separated recording usually. As this is used for the state classification we will ignore it.\n",
+    "* UnitPhasemod is analysis so we will ignore it. \n",
+    "* Eeg states is related EMG and the state classifier and we will ignore it. \n",
+    "\n",
+    "* Unitfeature contains additional ad-hoc unit properties not covered by `cell_metrics`. \n",
+    "\n",
+    "\n",
+    "We have the three files that correspond to the cell explorer format / interface:\n",
+    "* metric_cell_info\n",
+    "* mono_res_cellinfo\n",
+    "* spikes.cell_info\n",
+    "\n",
+    "To-do:\n",
+    "1) Check if the number of units in the cell-explorer is consitent with either phy or neuroscope. \n",
+    "2) \n",
+    "\n",
+    "* \n",
+    "\n",
     "Let's focus on the last files:\n",
-    "* `session` : contains general information related to the session such as the experimenter, the species, the strain and timestamps for the creation of the session.\n",
+    "* `session` : contains behavioral info and general information related to the session such as the experimenter, the species, the strain and timestamps for the creation of the session.\n",
     "* `cell_metrics` : here we find important information concerning the cells as well as some of the session information duplicated. Here we can find information related to the specific cells that were identified in the study such as the number of cell identified,  their brain region, their putative type, etcera. In general these files have an struture equal to the number of cells that were found. That is, structure would be (1, n_cells) where n_cells is the number of the cells identified.\n",
     "* `chanMap` : This seems to be concerned with information of the channels in the electrode. For example we find both the x and y coordinates of each of the channels. The structure of the files here is (1, n_channels) where n_channels is 64 for this setup.\n",
-    "* `rez` : seems to be a collection of parameters, not clear for which."
+    "* `rez` : contains duplicated information from the `chanMap` concerning the location of the electrodes plus some principal compoennt analysis parameters.\n",
+    "\n",
+    "Things with wave form and wavelete we ignore.  Because this is information can be computed from the raw data. \n",
+    "\n",
+    "For sessions that have a a merge file that we will ignore as there is only one `.dat` file. We should investigate the .dat file ensure the files are nan padded. If not, we might need to investigate spliting the electrical series in different start times according to the merge files.\n",
+    "\n",
+    "`.dat` files, how to open, Neuroscope recording extractor allows you to open dat files and you can look at the traces of a single channel. "
    ]
   },
   {
@@ -595,7 +766,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# XML"
+    "# XML\n",
+    "A file that pairs with the `.dat` and `.eeg` and contains all the header information. This is processed "
    ]
   },
   {
@@ -604,6 +776,29 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "session_path"
+   ]
   },
   {
    "cell_type": "code",
