added description of the raw data files

--- a/buzsaki_lab_to_nwb/tingley_code_septal/data_files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/tingley_code_septal/data_files_documentation.ipynb
@@ -58,13 +58,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ceb81b91-f606-452e-b9b7-09b28c7bbc87",
+   "metadata": {},
+   "source": [
+    "First let's just gather all the sesions in a list. This is the list that we use in the converter script to iterate througout all the sessions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "bbc629d6-2fcd-4f18-8d8f-31dca9bb9e07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_path = Path('/shared/catalystneuro/Buzsaki/TingleyD')  # Change this with the right location"
+    "data_path = Path('/shared/catalystneuro/Buzsaki/TingleyD')  # Change this with the right location\n",
+    "\n",
+    "subject_list = ['DT2', 'DT5', 'DT7', 'DT8',  'D79']\n",
+    "\n",
+    "session_list = [\n",
+    "    session\n",
+    "    for subject in data_path.iterdir()\n",
+    "    if subject.is_dir() and subject.name in subject_list\n",
+    "    for session in subject.iterdir()\n",
+    "    if session.is_dir() and 'test' not in session.name  # we remove some test sessions\n",
+    "]"
    ]
   },
   {
@@ -84,7 +102,7 @@
    "outputs": [],
    "source": [
     "subjects_in_study = ['DT2', 'DT5', 'DT7', 'DT8', 'DT9']\n",
-    "subject_path_dic = {p.stem:p for p in base_path.iterdir() if p.is_dir() and p.name in subjects_in_study}\n",
+    "subject_path_dic = {p.stem:p for p in data_path.iterdir() if p.is_dir() and p.name in subjects_in_study}\n",
     "pprint(subject_path_dic.keys())"
    ]
   },
@@ -133,8 +151,15 @@
    "id": "4507d9af-7155-43e2-a178-9d74140a3499",
    "metadata": {},
    "source": [
-    "## Sessions\n",
-    "Now let's see how the sessions are structure. For this dataset we have that each subject contains multiple files, tentatively belonging to different seessions and some top level files"
+    "## Sessions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a6af863-6e18-4ae6-9b81-98c0e6e5e126",
+   "metadata": {},
+   "source": [
+    "Now let's see how the sessions are structured. For this dataset we have that each subject contains multiple files, tentatively belonging to different seessions and some top level files"
    ]
   },
   {
@@ -462,7 +487,7 @@
    "source": [
     "not_data_formats = [\".jpg\", \".png\", \".pdf\", \".svg\", \".fig\", \".py\", \".m\", '.py']\n",
     "\n",
-    "format_list = [p.suffixes for p in base_path.rglob(\"*\") if p.is_file()]\n",
+    "format_list = [p.suffixes for p in data_path.rglob(\"*\") if p.is_file()]\n",
     "format_list = list({_ for suffixes in format_list for _ in suffixes}) \n",
     "format_list = [_ for _ in format_list if len(_)==4 and \" \" not in _]  # Only standar three letter formats.\n",
     "format_list = [_ for _ in format_list if not any(map(str.isdigit, _))]  # Remove numbers \n",
@@ -543,8 +568,10 @@
    "id": "d712071a-482d-4fc8-85d6-a45ebf788522",
    "metadata": {},
    "source": [
-    "## Dat file\n",
-    "These files are usually raw data. However, for this project it seems that most files do not have the raw data and only have the lfp."
+    "## Dat files - Raw data\n",
+    "These files are usually raw data. However, for this project it seems that most files do not have the raw data and only have the lfp.\n",
+    "\n",
+    "To give us an idea let's get the some files together with their pairs"
    ]
   },
   {
@@ -555,7 +582,7 @@
    "outputs": [],
    "source": [
     "format_to_search = \".dat\"\n",
-    "path_and_size_pairs = [('/'.join(str(p).split('/')[5:]), f\"{p.stat().st_size/1000**2:2.2f} MB\") for p in base_path.rglob(f\"*{format_to_search}\") if p.is_file()]\n",
+    "path_and_size_pairs = [('/'.join(str(p).split('/')[5:]), f\"{p.stat().st_size/1000**2:2.2f} MB\") for p in data_path.rglob(f\"*{format_to_search}\") if p.is_file()]\n",
     "pprint(path_and_size_pairs[:10], compact=True)"
    ]
   },
@@ -584,8 +611,144 @@
     "     ('DT2/z_Intruder_test_160304_152951/extras/supply.dat', '806.26 MB'),\n",
     "     ('DT2/z_Intruder_test_160304_152951/extras/time.dat', '806.26 MB')]\n",
     "\n",
-    "Exploring the dat files above, we see that not all sessions have a .dat file, and that there are some .dat files that do not seem to correspond to sessions."
+    "Exploring the dat files above, we see that not all sessions have a .dat file, and that there are some .dat files that do not seem to correspond to sessions. \n",
+    "\n",
+    "We can create a data frame with complete information of where the raw data is to see if all the subjects have."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb5b3047-0d50-40a7-a88c-91d46c210cc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_to_search = '.dat'\n",
+    "names = [session.name for session in session_list]\n",
+    "subject = [session.parent.name for session in session_list]\n",
+    "path_to_file_list = [list(session.glob(f\"*{format_to_search}\")) for session in session_list]\n",
+    "file_names = [[p.name for p in path_list] for path_list in path_to_file_list]\n",
+    "matches_list = [len(path) for path in path_to_file_list]\n",
+    "#canonic_name = [f\"{session.name}.lfp\"== path_list[0].name if len(path_list) > 0 else np.nan for session, path_list in zip(session_list, path_to_file_list)]\n",
+    "canonic_name = [any([f\"{session.name}{format_to_search}\" == p.name for p in path_list]) for session, path_list in zip(session_list, path_to_file_list)]\n",
+    "\n",
+    "data_dic = {'subject': subject, 'session_name':names, 'matches':matches_list, \n",
+    "'matches_name': file_names, 'path_to_files':path_to_file_list, 'canonic_name': canonic_name}\n",
+    "df = pd.DataFrame(data_dic)\n",
+    "df.sort_values(by=['subject', 'session_name'], ignore_index=True, inplace=True)\n",
+    "df.sample(n=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "896d61cb-c4f0-43ce-8847-c0bc3f30b6b1",
+   "metadata": {},
+   "source": [
+    "|     | subject   | session_name                        |   matches | matches_name   | path_to_files   | canonic_name   |\n",
+    "|----:|:----------|:------------------------------------|----------:|:---------------|:----------------|:---------------|\n",
+    "| 106 | DT8       | 20170201_72um_432um_merge           |         0 | []             | []              | False          |\n",
+    "| 117 | DT8       | 20170214_216um_1944um_170214_102804 |         0 | []             | []              | False          |\n",
+    "|  33 | DT5       | 20161003_216um_288um_merge          |         0 | []             | []              | False          |\n",
+    "|  75 | DT7       | 20170319_288um_0um_170319_123708    |         0 | []             | []              | False          |\n",
+    "|  66 | DT5       | 20161105_2196um_2232um_merge        |         0 | []             | []              | False          |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "495dd0ac-3776-4cf6-9643-2c8675b93331",
+   "metadata": {},
+   "source": [
+    "The dataframe has a row for every session and it looks for matching '.dat' files for that session and if they exist whether they have a name equal to the name of the session (canonical name) which is a standard used in other Buzsaki projects. \n",
+    "\n",
+    "Most files do not have any matches for `.dat` files:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1857de17-289d-40e3-93a2-1f77aa25797a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f\"{100 * (df['matches'] > 0).mean():2.2f} per cent of files contain '.dat' files. {sum((df['matches'] > 0))} matches in total\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f156552-d490-4aa7-96f5-c79c3fefe251",
+   "metadata": {},
+   "source": [
+    "\"21.28 per cent of files contain '.dat' files. 30 matches in total\"\n",
+    "\n",
+    "Moreover, most of the raw files are concentrated in subject DT2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "713f571f-ad4d-43ac-b7aa-4b3c40e4bd13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_string = f\"matches > 0\"\n",
+    "print(df.query(query_string)['subject'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a174c4cc-69e9-464e-b20f-861dfe268b60",
+   "metadata": {},
+   "source": [
+    "|     |   subject |\n",
+    "|:----|----------:|\n",
+    "| DT2 |        29 |\n",
+    "| DT5 |         1 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b26f5c45-a1fd-43b9-82f6-526ccd5e1da1",
+   "metadata": {},
+   "source": [
+    "When `.dat` files are availble they do have a canonic name. The following line should output 1.0 indicating that all the files possess with the structure of:\n",
+    "\n",
+    "`{session_name}.dat`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f53dfa6-0ef6-4495-9341-523e8747870f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_string = f\"matches > 0\"\n",
+    "df.query(query_string)['canonic_name'].mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4663c564-14e7-439f-ae07-b5460ae1c490",
+   "metadata": {},
+   "source": [
+    "# LFP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5fe6538-9c3c-4a7a-92db-69bd7cbdb263",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b53c9545-5df9-4db3-b88c-2b98b748c908",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -762,7 +925,7 @@
    "outputs": [],
    "source": [
     "format_to_search = \".csv\"\n",
-    "path_and_size_pairs = [(p.stem, f\"{p.stat().st_size/1000**2:2.2f} MB\") for p in base_path.rglob(f\"*{format_to_search}\") if p.is_file()]\n",
+    "path_and_size_pairs = [(p.stem, f\"{p.stat().st_size/1000**2:2.2f} MB\") for p in data_path.rglob(f\"*{format_to_search}\") if p.is_file()]\n",
     "pprint(path_and_size_pairs[:10], compact=True)"
    ]
   },
@@ -877,9 +1040,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "buzsaki_lab_to_nwb",
+   "display_name": "convert_to_nwb",
    "language": "python",
-   "name": "buzsaki_lab_to_nwb"
+   "name": "convert_to_nwb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -891,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
