Added lfp, clu, res and spikes.cellinfo.mat comparison

--- a/buzsaki_lab_to_nwb/tingley_code_septal/data_files_documentation.ipynb
+++ b/buzsaki_lab_to_nwb/tingley_code_septal/data_files_documentation.ipynb
@@ -46,7 +46,33 @@
     "        except:\n",
     "            mat_file = loadmat_scipy(file_path)\n",
     "            mat_file['read'] = 'scipy'\n",
-    "    return mat_file"
+    "    return mat_file\n",
+    "\n",
+    "def calculate_data_availability(format_to_search, session_path_list):\n",
+    "    names = [session.name for session in session_path_list]\n",
+    "    subject = [session.parent.name for session in session_path_list]\n",
+    "    matches_paths_list = [list(session.glob(f\"*{format_to_search}*\")) for session in session_path_list]\n",
+    "    matches_names = [[p.name for p in path_list] for path_list in matches_paths_list]\n",
+    "    matches_list = [len(path) for path in matches_paths_list]\n",
+    "    canonic_name = [\n",
+    "        any([f\"{session.name}{format_to_search}\" == p.name for p in path_list])\n",
+    "        for session, path_list in zip(session_path_list, matches_paths_list)\n",
+    "    ]\n",
+    "\n",
+    "    data_dic = {\n",
+    "        \"subject\": subject,\n",
+    "        \"session_name\": names,\n",
+    "        \"matches\": matches_list,\n",
+    "        \"matches_names\": matches_names,\n",
+    "        \"canonic_name\": canonic_name,\n",
+    "        \"matches_paths_list\": matches_paths_list,\n",
+    "        \"session_path\": session_path_list,\n",
+    "    }\n",
+    "    df = pd.DataFrame(data_dic)\n",
+    "    df.sort_values(by=[\"subject\", \"session_name\"], ignore_index=True, inplace=True)\n",
+    "\n",
+    "    return df\n",
+    "\n"
    ]
   },
   {
@@ -74,9 +100,9 @@
    "source": [
     "data_path = Path('/shared/catalystneuro/Buzsaki/TingleyD')  # Change this with the right location\n",
     "\n",
-    "subject_list = ['DT2', 'DT5', 'DT7', 'DT8',  'D79']\n",
+    "subject_list = ['DT2', 'DT5', 'DT7', 'DT8',  'DT9']\n",
     "\n",
-    "session_list = [\n",
+    "session_path_list = [\n",
     "    session\n",
     "    for subject in data_path.iterdir()\n",
     "    if subject.is_dir() and subject.name in subject_list\n",
@@ -101,8 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subjects_in_study = ['DT2', 'DT5', 'DT7', 'DT8', 'DT9']\n",
-    "subject_path_dic = {p.stem:p for p in data_path.iterdir() if p.is_dir() and p.name in subjects_in_study}\n",
+    "subject_path_dic = {p.stem:p for p in data_path.iterdir() if p.is_dir() and p.name in subject_list}\n",
     "pprint(subject_path_dic.keys())"
    ]
   },
@@ -624,19 +649,8 @@
    "outputs": [],
    "source": [
     "format_to_search = '.dat'\n",
-    "names = [session.name for session in session_list]\n",
-    "subject = [session.parent.name for session in session_list]\n",
-    "path_to_file_list = [list(session.glob(f\"*{format_to_search}\")) for session in session_list]\n",
-    "file_names = [[p.name for p in path_list] for path_list in path_to_file_list]\n",
-    "matches_list = [len(path) for path in path_to_file_list]\n",
-    "#canonic_name = [f\"{session.name}.lfp\"== path_list[0].name if len(path_list) > 0 else np.nan for session, path_list in zip(session_list, path_to_file_list)]\n",
-    "canonic_name = [any([f\"{session.name}{format_to_search}\" == p.name for p in path_list]) for session, path_list in zip(session_list, path_to_file_list)]\n",
-    "\n",
-    "data_dic = {'subject': subject, 'session_name':names, 'matches':matches_list, \n",
-    "'matches_name': file_names, 'path_to_files':path_to_file_list, 'canonic_name': canonic_name}\n",
-    "df = pd.DataFrame(data_dic)\n",
-    "df.sort_values(by=['subject', 'session_name'], ignore_index=True, inplace=True)\n",
-    "df.sample(n=5)"
+    "df = calculate_data_availability(format_to_search, session_path_list)\n",
+    "df.sample(n=5, random_state=5)[['subject', 'session_name', 'matches_names', 'canonic_name']]"
    ]
   },
   {
@@ -644,13 +658,13 @@
    "id": "896d61cb-c4f0-43ce-8847-c0bc3f30b6b1",
    "metadata": {},
    "source": [
-    "|     | subject   | session_name                        |   matches | matches_name   | path_to_files   | canonic_name   |\n",
-    "|----:|:----------|:------------------------------------|----------:|:---------------|:----------------|:---------------|\n",
-    "| 106 | DT8       | 20170201_72um_432um_merge           |         0 | []             | []              | False          |\n",
-    "| 117 | DT8       | 20170214_216um_1944um_170214_102804 |         0 | []             | []              | False          |\n",
-    "|  33 | DT5       | 20161003_216um_288um_merge          |         0 | []             | []              | False          |\n",
-    "|  75 | DT7       | 20170319_288um_0um_170319_123708    |         0 | []             | []              | False          |\n",
-    "|  66 | DT5       | 20161105_2196um_2232um_merge        |         0 | []             | []              | False          |"
+    "|     | subject   | session_name                                       | matches_names                                              | canonic_name   |\n",
+    "|----:|:----------|:---------------------------------------------------|:-----------------------------------------------------------|:---------------|\n",
+    "|  48 | DT5       | 20161017_1440um_2016um_merge                       | []                                                         | False          |\n",
+    "| 164 | DT9       | 20170526_1116um_1000um_merge                       | []                                                         | False          |\n",
+    "|  81 | DT7       | 20170325_576um_360um_170325_125511                 | []                                                         | False          |\n",
+    "|  21 | DT2       | DT2_rPPC_rCCG_3612um_1360um_20160302_160302_134841 | ['DT2_rPPC_rCCG_3612um_1360um_20160302_160302_134841.dat'] | True           |\n",
+    "| 115 | DT8       | 20170212_144um_1944um_170212_154634                | []                                                         | False          |"
    ]
   },
   {
@@ -670,7 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f\"{100 * (df['matches'] > 0).mean():2.2f} per cent of files contain '.dat' files. {sum((df['matches'] > 0))} matches in total\""
+    "f\"{100 * (df['matches'] > 0).mean():2.2f} per cent of files contain '{format_to_search}' files. {sum((df['matches'] > 0))} matches in total\""
    ]
   },
   {
@@ -678,7 +692,7 @@
    "id": "4f156552-d490-4aa7-96f5-c79c3fefe251",
    "metadata": {},
    "source": [
-    "\"21.28 per cent of files contain '.dat' files. 30 matches in total\"\n",
+    "\"19.05 per cent of files contain '.dat' files. 32 matches in total\"\n",
     "\n",
     "Moreover, most of the raw files are concentrated in subject DT2."
    ]
@@ -731,7 +745,7 @@
    "id": "4663c564-14e7-439f-ae07-b5460ae1c490",
    "metadata": {},
    "source": [
-    "# LFP"
+    "## LFP"
    ]
   },
   {
@@ -740,7 +754,53 @@
    "id": "e5fe6538-9c3c-4a7a-92db-69bd7cbdb263",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "format_to_search = '.lfp'\n",
+    "df = calculate_data_availability(format_to_search, session_path_list)\n",
+    "df.sample(n=5, random_state=1)[['subject', 'session_name', 'matches_names', 'canonic_name']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d016d8f6-5d7b-47b5-a2cd-f10ae3e800d1",
+   "metadata": {},
+   "source": [
+    "|     | subject   | session_name                                       | matches_names                                              | canonic_name   |\n",
+    "|----:|:----------|:---------------------------------------------------|:-----------------------------------------------------------|:---------------|\n",
+    "|  48 | DT5       | 20161017_1440um_2016um_merge                       | ['20161017_1440um_2016um_merge.lfp']                       | True           |\n",
+    "| 164 | DT9       | 20170526_1116um_1000um_merge                       | ['20170526_1116um_1000um_merge.lfp']                       | True           |\n",
+    "|  81 | DT7       | 20170325_576um_360um_170325_125511                 | ['20170325_576um_360um_170325_125511.lfp']                 | True           |\n",
+    "|  21 | DT2       | DT2_rPPC_rCCG_3612um_1360um_20160302_160302_134841 | ['DT2_rPPC_rCCG_3612um_1360um_20160302_160302_134841.lfp'] | True           |\n",
+    "| 115 | DT8       | 20170212_144um_1944um_170212_154634                | ['20170212_144um_1944um_170212_154634.lfp']                | True           |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d955e7f-75df-43c1-8bc2-15fb6673271a",
+   "metadata": {},
+   "source": [
+    "Most sessions do have a `.dat` file. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80482986-a1c0-4592-96b7-da37b80cc2b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f\"{100 * (df['matches'] > 0).mean():2.2f} per cent of files contain '{format_to_search}' files. {sum((df['matches'] > 0))} matches in total\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16cfcd58-bfdf-4a89-ac3b-739df6943db8",
+   "metadata": {},
+   "source": [
+    "\"98.21 per cent of files contain '.lfp' files. 165 matches in total\"\n",
+    "\n",
+    "In fact, there only seem to be three sessions that do not have it:"
+   ]
   },
   {
    "cell_type": "code",
@@ -748,7 +808,183 @@
    "id": "b53c9545-5df9-4db3-b88c-2b98b748c908",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.query('matches==0')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "536ab4d7-6748-42de-afe5-d54528a43413",
+   "metadata": {},
+   "source": [
+    "|     | subject   | session_name                         |   matches | matches_names   | canonic_name   | matches_paths_list   | session_path                                                                    |\n",
+    "|----:|:----------|:-------------------------------------|----------:|:----------------|:---------------|:---------------------|:--------------------------------------------------------------------------------|\n",
+    "|  94 | DT7       | 20170411_1296um_1152um_170411_113418 |         0 | []              | False          | []                   | /shared/catalystneuro/Buzsaki/TingleyD/DT7/20170411_1296um_1152um_170411_113418 |\n",
+    "| 165 | DT9       | 20170527_1260um_1072um_merge         |         0 | []              | False          | []                   | /shared/catalystneuro/Buzsaki/TingleyD/DT9/20170527_1260um_1072um_merge         |\n",
+    "| 166 | DT9       | 20170528_1332um_1108um_170528_114153 |         0 | []              | False          | []                   | /shared/catalystneuro/Buzsaki/TingleyD/DT9/20170528_1332um_1108um_170528_114153 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9944913-eb84-4f53-8371-40b759eefc95",
+   "metadata": {},
+   "source": [
+    "## Spikes and units: clu, res and spikes.cellinfo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6f89d75-8e79-4c4d-a56d-0d804581fca0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_to_search = '.res'\n",
+    "df_res = calculate_data_availability(format_to_search, session_path_list)\n",
+    "\n",
+    "format_to_search = '.clu'\n",
+    "df_clu = calculate_data_availability(format_to_search, session_path_list)\n",
+    "\n",
+    "df_both = pd.merge(df_res, df_clu, on=['subject', 'session_name', 'session_path'], how='inner', suffixes=['_res', '_clu'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f86c4a32-beae-4cc5-be8b-4e1fe2c260bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_string = f\"matches == 0\"\n",
+    "df_query = df_res.query(query_string)\n",
+    "print(f\"sessions without res format : {df_query.shape[0]}\")\n",
+    "df_query = df_clu.query(query_string)\n",
+    "print(f\"sesssions without clu format : {df_query.shape[0]}\")\n",
+    "\n",
+    "query_string = f\"matches_clu ==0 and matches_res==0\"\n",
+    "df_query = df_both.query(query_string)\n",
+    "print(f\"sessions lacking both formats: {df_query.shape[0]}\")\n",
+    "\n",
+    "print(f\"This is {df_query.shape[0] * 100 / df_both.shape[0]:2.2f}% of total\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5aafad3-a2e5-43f5-ba46-cb6099400314",
+   "metadata": {},
+   "source": [
+    "    sessions without res format : 55\n",
+    "    sesssions without clu format : 54\n",
+    "    sessions lacking both formats: 54\n",
+    "    This is 32.14% of total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac32e38c-6e40-4b64-bfdb-398c4926d322",
+   "metadata": {},
+   "source": [
+    "Now let's take a look at the sessions with the `spikes.cellinfo.mat` format available"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bc80b83-6502-4bdd-a004-77565d5040bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "format_to_search = '.spikes.cellinfo.mat'\n",
+    "df_cellinfo_spikes = calculate_data_availability(format_to_search, session_path_list)\n",
+    "query_string = f\"matches == 0\"\n",
+    "df_query = df_cellinfo_spikes.query(query_string)\n",
+    "print(f\"sessions without the {format_to_search} format : {df_query.shape[0]}\")\n",
+    "print(f\"This is {df_query.shape[0] * 100 / df_cellinfo_spikes.shape[0]:2.2f}% of total\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "02b6568a-f763-4626-acc4-6b80d76da00f",
+   "metadata": {},
+   "source": [
+    "    sessions without the .spikes.cellinfo.mat format : 89\n",
+    "    This is 52.98% of total\n",
+    "    \n",
+    " Are there sessions that have neither of them? That is, no `clu` and `res` format and also lacking `spikes.cellinfo.mat` format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bdf4d60-4e4c-4764-8292-6a877bd5aad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_all = df_both.merge(df_cellinfo_spikes, on=['subject', 'session_name', 'session_path'], how='inner', suffixes=['normal', 'cellinfo'])\n",
+    "\n",
+    "query_string = f\"matches_clu ==0 and matches_res==0 and matches==0\"\n",
+    "df_query = df_all.query(query_string)\n",
+    "print(f\"sessions lacking the three formats: {df_query.shape[0]}\")\n",
+    "\n",
+    "print(f\"This is {df_query.shape[0] * 100 / df_all.shape[0]:2.2f}% of total\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a3f2b47-39e1-4ea5-a235-993874c12c92",
+   "metadata": {},
+   "source": [
+    "    sessions lacking the three formats: 54\n",
+    "    This is 32.14% of total\n",
+    " \n",
+    " Now, it is the case that sessions that lack the `clu` and `res` format also lack the `spikes.cellinfo.mat` format but not the other way around:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5437b9d-e491-488b-9dd9-45d997e7b445",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_string = f\"matches_clu == 0 and matches_res == 0 and matches > 0\"\n",
+    "df_query = df_all.query(query_string)\n",
+    "print(f\"sessions lacking only spikes.cellinfo.mat format: {df_query.shape[0]}\")\n",
+    "\n",
+    "print(f\"This is {df_query.shape[0] * 100 / df_all.shape[0]:2.2f}% of total\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "460638ea-c889-43e3-8858-a795e651fff2",
+   "metadata": {},
+   "source": [
+    "    files lacking only spikes.cellinfo.mat format: 0\n",
+    "    This is 0.00% of total"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9411162b-48bb-4ad6-906b-49432946dc43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query_string = f\"matches_clu > 0 and matches_res > 0 and matches==0\"\n",
+    "df_query = df_all.query(query_string)\n",
+    "print(f\"sessions lacking only spikes.cellinfo.mat format: {df_query.shape[0]}\")\n",
+    "\n",
+    "print(f\"This is {df_query.shape[0] * 100 / df_all.shape[0]:2.2f}% of total\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb059e72-a0ad-4614-9b18-8ac67dcb439a",
+   "metadata": {},
+   "source": [
+    "    sessions lacking only spikes.cellinfo.mat format: 34\n",
+    "    This is 20.24% of total"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1040,9 +1276,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "convert_to_nwb",
+   "display_name": "buzsaki-lab-to-nwb",
    "language": "python",
-   "name": "convert_to_nwb"
+   "name": "buzsaki-lab-to-nwb"
   },
   "language_info": {
    "codemirror_mode": {
